# fraktor-rs

./: .coderabbit.yaml  .codex-child-ref-plan.md  .dockerignore  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CC-SDD-CODEX.md  CC_SDD-GEMINI.md  CHANGELOG.md  CLAUDE.md  COMMON.md  CONTEXT.md  Cargo.toml  GEMINI.md  Makefile.toml  PLANS.md  README.ja.md  README.md  codecov.yml  devbox.json  mise.toml  package-lock.json  package.json  renovate.json  rust-toolchain.toml  rustfmt.toml  skills-lock.json  test
lints/cfg-std-forbid-lint/: Cargo.toml  README.md  rust-toolchain.toml
lints/cfg-std-forbid-lint/src/: lib.rs
lints/redundant-fqcn-lint/: Cargo.toml  README.md  rust-toolchain.toml
lints/redundant-fqcn-lint/src/: lib.rs
lints/use-placement-lint/: Cargo.toml  README.md  SPEC.md  rust-toolchain.toml
lints/use-placement-lint/src/: lib.rs
modules/actor/: Cargo.toml
modules/actor-adaptor-embassy/: Cargo.toml
modules/actor-adaptor-embassy/src/: actor.rs  dispatch.rs  lib.rs  tick_driver.rs  tick_driver_test.rs  time.rs
modules/actor-adaptor-std/: Cargo.toml
modules/actor-adaptor-std/benches/: actor_baseline.rs  balancing_dispatcher.rs
modules/actor-adaptor-std/src/: actor.rs  blocker.rs  blocker_test.rs  lib.rs  pattern.rs  std.rs  system.rs  tick_driver.rs  tick_driver_test.rs  time.rs
modules/actor-adaptor-std/tests/: circuit_breakers_registry.rs  dispatcher_public_surface.rs  sp_h1_5_panic_guard.rs  sp_h1_5_system_escalation.rs  std_adaptor_boot_e2e.rs
modules/actor-core/: Cargo.toml  clippy.toml
modules/actor-core-kernel/: Cargo.toml  clippy.toml
modules/actor-core-kernel/benches/: mailbox.rs
modules/actor-core-kernel/src/: actor.rs  event.rs  io.rs  lib.rs  lib_test.rs  pattern.rs  pattern_test.rs  routing.rs  serialization.rs  support.rs
modules/actor-core-kernel/tests/: actor_path_e2e.rs  actor_ref_resolve_cache.rs  actor_selection_e2e.rs  byte_string.rs  classic_user_flow_e2e.rs  death_watch.rs  event_stream.rs  invoke_guard.rs  kernel_public_surface.rs  logging_filter_public_surface.rs  message_container_serializer.rs  ping_pong.rs  supervisor.rs  system_events.rs  system_lifecycle.rs  system_message_serializer.rs
modules/actor-core-typed/: Cargo.toml
modules/actor-core-typed/src/: actor_ref.rs  actor_ref_resolver.rs  actor_ref_resolver_setup.rs  actor_ref_resolver_test.rs  actor_tags.rs  actor_tags_test.rs  backoff_supervisor_strategy.rs  backoff_supervisor_strategy_test.rs  behavior.rs  behavior_interceptor.rs  delivery.rs  delivery_test.rs  dispatcher_selector.rs  dispatcher_selector_test.rs  dispatchers.rs  dispatchers_test.rs  eventstream.rs  extensible_behavior.rs  extension_setup.rs  extension_setup_test.rs  internal.rs  lib.rs  lib_test.rs  log_options.rs  log_options_test.rs  mailbox_selector.rs  message_adapter.rs  message_and_signals.rs  props.rs  props_test.rs  pubsub.rs  receptionist.rs  receptionist_test.rs  recipient_ref.rs  restart_supervisor_strategy.rs  scheduler.rs  spawn_protocol.rs  supervisor_strategy.rs  system.rs  system_test.rs  (+4 more)
modules/actor-core-typed/tests/: typed_scheduler.rs  typed_user_flow_e2e.rs
modules/actor-core/examples/: no_std_tick_driver_support.rs
modules/actor-core/src/: actor.rs  actor_cell.rs  actor_context.rs  actor_error.rs  actor_error_reason.rs  actor_future.rs  actor_future_listener.rs  actor_prim.rs  actor_ref.rs  actor_ref_backend.rs  any_message.rs  any_message_view.rs  any_owned_message.rs  ask_reply_endpoint.rs  ask_response.rs  child_ref.rs  config.rs  core.rs  dead_letter.rs  deadletter.rs  deadletter_entry.rs  dispatcher.rs  error.rs  event_stream.rs  event_stream_event.rs  event_stream_subscriber.rs  event_stream_subscriber_entry.rs  event_stream_subscription.rs  eventstream.rs  lib.rs  lifecycle_event.rs  log_event.rs  logger_subscriber.rs  logger_writer.rs  mailbox.rs  mailbox_actor_ref_backend.rs  mailbox_capacity.rs  mailbox_instrumentation.rs  mailbox_metrics_event.rs  mailbox_overflow_strategy.rs  (+26 more)
modules/actor-core/tests/: actor_path_e2e.rs  actor_ref_resolve_cache.rs  actor_selection_e2e.rs  byte_string.rs  classic_user_flow_e2e.rs  death_watch.rs  event_stream.rs  invoke_guard.rs  kernel_public_surface.rs  logging_filter_public_surface.rs  message_container_serializer.rs  perf_mailbox.rs  ping_pong.rs  remote_router_config.rs  runtime_lock_provider.rs  supervisor.rs  system_events.rs  system_lifecycle.rs  system_message_serializer.rs  typed_scheduler.rs  typed_user_flow_e2e.rs
modules/actor-std/: Cargo.toml
modules/actor-std/src/: actor_prim.rs  dispatcher.rs  dispatcher_config_ext.rs  event_stream.rs  eventstream.rs  futures.rs  lib.rs  props.rs  props_ext.rs  runtime_mutex.rs  scheduler.rs  system.rs  tick.rs  tokio_dispatch_executor.rs  typed.rs
modules/actor-std/tests/: tokio_acceptance.rs
modules/cluster/: Cargo.toml  clippy.toml
modules/cluster-adaptor-std/: Cargo.toml
modules/cluster-core/: Cargo.toml  clippy.toml
modules/cluster-core-typed/: Cargo.toml
modules/persistence/: Cargo.toml
modules/persistence-adaptor-std/: Cargo.toml
modules/persistence-core/: Cargo.toml
modules/persistence-core-typed/: Cargo.toml
modules/remote/: Cargo.toml
modules/remote-adaptor-std/: Cargo.toml
modules/remote-core/: Cargo.toml  clippy.toml
modules/stream/: Cargo.toml
modules/stream-adaptor-std/: Cargo.toml
modules/stream-core-actor-typed/: Cargo.toml
modules/streams/: Cargo.toml
modules/utils-adaptor-std/: Cargo.toml
modules/utils-core/: Cargo.toml  clippy.toml
modules/utils-std/: Cargo.toml
showcases-std/: Cargo.toml
showcases-std/child_lifecycle/: main.rs
showcases-std/cluster_membership/: main.rs
showcases-std/getting_started/: main.rs
showcases-std/persistent_actor/: main.rs
showcases-std/remote_messaging/: main.rs
showcases-std/request_reply/: main.rs
showcases-std/routing/: main.rs
showcases-std/serialization/: main.rs
showcases-std/src/: support.rs
showcases-std/stash/: main.rs
showcases-std/state_management/: main.rs
showcases-std/stream_pipeline/: main.rs
showcases-std/timers/: main.rs
(+11563 files in other folders)
