[package]
name = "fraktor-rs"
version = "0.2.11"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Specification-driven actor runtime bridging Akka/Pekko and Proto.Actor semantics across no_std and std targets."
readme = "README.md"
homepage = "https://github.com/j5ik2o/fraktor-rs"
repository = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-rs"
keywords = ["actors", "runtime", "no-std", "embedded", "concurrency"]
categories = ["concurrency", "embedded", "no-std"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "README.ja.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[lints]
workspace = true

[workspace]
resolver = "2"
members = [
    "modules/utils-core",
    "modules/utils-adaptor-std",
    "modules/actor-core-kernel",
    "modules/actor-core-typed",
    "modules/actor-adaptor-std",
    "modules/persistence-core",
    "modules/remote-core",
    "modules/remote-adaptor-std",
    "modules/cluster-core",
    "modules/cluster-adaptor-std",
    "modules/stream-core",
    "modules/stream-adaptor-std",
    "showcases/std",
    "tests/e2e",
]

[workspace.package]
edition = "2024"

[workspace.metadata.dylint]
libraries = [
    { path = "lints/mod-file-lint" },
    { path = "lints/module-examples-lint" },
    { path = "lints/module-wiring-lint" },
    { path = "lints/type-per-file-lint" },
    { path = "lints/tests-location-lint" },
    { path = "lints/use-placement-lint" },
    { path = "lints/redundant-fqcn-lint" },
    { path = "lints/rustdoc-lint" },
    { path = "lints/cfg-std-forbid-lint" },
    { path = "lints/ambiguous-suffix-lint" },
]

[workspace.lints.rust]
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fraktor_disable_tell)'] }

[workspace.lints.clippy]
let_underscore_must_use = "deny"
let_underscore_future = "deny"

[workspace.dependencies]
fraktor-actor-core-kernel-rs = { path = "modules/actor-core-kernel", version = "0.2.11" }
fraktor-actor-core-typed-rs = { path = "modules/actor-core-typed", version = "0.2.11" }
fraktor-actor-adaptor-std-rs = { path = "modules/actor-adaptor-std", version = "0.2.11" }
fraktor-cluster-core-rs = { path = "modules/cluster-core", version = "0.2.11", default-features = false }
fraktor-cluster-adaptor-std-rs = { path = "modules/cluster-adaptor-std", version = "0.2.11" }
fraktor-persistence-core-rs = { path = "modules/persistence-core", version = "0.2.11", default-features = false }
fraktor-remote-core-rs = { path = "modules/remote-core", version = "0.2.11", default-features = false }
fraktor-remote-adaptor-std-rs = { path = "modules/remote-adaptor-std", version = "0.2.11" }
alloc-cortex-m = "0.4"
async-trait = { version = "0.1.89", default-features = false }
fraktor-utils-core-rs = { path = "modules/utils-core", version = "0.2.11", default-features = false }
fraktor-utils-adaptor-std-rs = { path = "modules/utils-adaptor-std", version = "0.2.11" }
fraktor-stream-core-rs = { path = "modules/stream-core", version = "0.2.11", default-features = false }
fraktor-stream-adaptor-std-rs = { path = "modules/stream-adaptor-std", version = "0.2.11" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
criterion = "0.8"
critical-section = { version = "1.2", default-features = false }
dashmap = "7.0.0-rc2"
embassy-executor = { version = "0.10", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
embassy-sync = { version = "0.8", default-features = false }
embassy-time = { version = "0.5", default-features = false }
embedded-hal = "1.0"
futures = { version = "0.3.31", default-features = false }
panic-halt = "1.0"
parking_lot = "0.12.5"
portable-atomic = { version = "1.11", default-features = false }
portable-atomic-util = { version = "0.2", default-features = false }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
prost = "0.14.1"
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.12", default-features = false }
rp235x-hal = { version = "0.4", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.145"
erased-serde = { version = "0.4", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "serde"] }
bytes = { version = "1.7", default-features = false }
libm = { version = "0.2", default-features = false }
spin = { version = "0.10", default-features = false }
static_assertions = "1.1.0"
static_cell = "2"
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.47.1", default-features = false }
tokio-condvar = "0.3.0"
tokio-util = "0.7.16"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
heapless = { version = "0.9", default-features = false }
hashbrown = { version = "0.17.0", default-features = false }
ahash = { version = "0.8", default-features = false }
anyhow = "1.0"
aws-sdk-ecs = "1"
aws-config = "1"
