[package]
name = "cfg-std-forbid-lint"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5"
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
dylint_testing = "5"
