[package]
name = "redundant-fqcn-lint"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }

[dev-dependencies]
dylint_testing = "6"
