[package]
name = "use-placement-lint"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5"
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
dylint_testing = "5"
