[package]
name = "fraktor-actor-adaptor-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor standard adaptor bindings for actor runtime"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "actor", "adaptor", "std"]
categories = ["concurrency"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-actor-adaptor-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
test-support = ["fraktor-actor-rs/test-support"]
tokio-executor = ["dep:tokio"]

[dependencies]
fraktor-actor-rs = { workspace = true }
fraktor-utils-rs = { workspace = true, features = ["alloc", "std", "unsize"] }
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
serde_json = { workspace = true }

[[bench]]
name = "actor_baseline"
path = "benches/actor_baseline.rs"
harness = false
required-features = ["tokio-executor"]

[lints]
workspace = true
