[package]
name = "fraktor-actor-adaptor-std-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor standard adaptor bindings for actor runtime"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "actor", "adaptor", "std"]
categories = ["concurrency"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-actor-adaptor-std-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
test-support = ["fraktor-actor-core-rs/test-support"]
tokio-executor = ["dep:tokio"]

[dependencies]
fraktor-actor-core-rs = { workspace = true }
fraktor-utils-adaptor-std-rs = { workspace = true }
fraktor-utils-core-rs = { workspace = true, features = ["alloc", "unsize"] }
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
criterion = { workspace = true }
# Override the prod dep to pull in `test-support` (which transitively enables
# `critical-section/std`) so the lib's `#[cfg(any(test, feature = "test-support"))]`
# items are visible to integration tests and benches in this crate. Without
# this override, `cargo test --features tokio-executor` and
# `cargo bench --features tokio-executor` fail to link / resolve symbols
# because the bench / test binaries do not pick up the `std` impl of
# `critical-section`.
fraktor-actor-core-rs = { workspace = true, features = ["test-support"] }
critical-section = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
serde_json = { workspace = true }

[[bench]]
name = "actor_baseline"
path = "benches/actor_baseline.rs"
harness = false
required-features = ["tokio-executor"]

[[bench]]
name = "balancing_dispatcher"
path = "benches/balancing_dispatcher.rs"
harness = false
required-features = ["tokio-executor"]

[lints]
workspace = true
