[package]
name = "fraktor-actor-core-kernel-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor no_std actor runtime"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "actor", "runtime", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-actor-core-kernel-rs"
readme = "../../README.md"
autoexamples = false

[features]
default = []
alloc = []
alloc-metrics = []

[dependencies]
async-trait = { workspace = true }
fraktor-utils-core-rs = { workspace = true, default-features = false, features = ["alloc", "unsize"] }
heapless = { workspace = true, default-features = false, features = ["portable-atomic"] }
# `critical-section` feature は `thumbv8m.main-none-eabi` 等の 32-bit ARM (Cortex-M)
# ターゲットで `AtomicU64` を critical-section ベースで emulation するために必須。
# CI が `thumbv8m.main` で actor-core を check しており (scripts/ci-check.sh:1056)、
# production code 内で `portable_atomic::AtomicU64` を 8 ファイル使っている。
# 詳細評価: docs/plan/2026-04-22-portable-atomic-critical-section-evaluation.md
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
portable-atomic-util = { workspace = true, default-features = false, features = ["alloc"] }
cortex-m = { workspace = true, optional = true }
hashbrown = { workspace = true, default-features = false }
ahash = { workspace = true, default-features = false }
serde = { workspace = true }
erased-serde = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
tracing = { workspace = true, default-features = false }

[target.'cfg(loom)'.dependencies]
loom = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
proptest = "1.5"
critical-section = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["std"] }
fraktor-actor-adaptor-std-rs = { workspace = true, features = ["test-support"] }
fraktor-utils-adaptor-std-rs = { workspace = true }
fraktor-utils-core-rs = { workspace = true, features = ["debug-locks"] }
loom = { workspace = true }

[[test]]
name = "actor_path_e2e"
path = "tests/actor_path_e2e.rs"

[[test]]
name = "actor_selection_e2e"
path = "tests/actor_selection_e2e.rs"

[[test]]
name = "death_watch"
path = "tests/death_watch.rs"

[[test]]
name = "event_stream"
path = "tests/event_stream.rs"

[[test]]
name = "ping_pong"
path = "tests/ping_pong.rs"

[[test]]
name = "supervisor"
path = "tests/supervisor.rs"

[[test]]
name = "system_events"
path = "tests/system_events.rs"

[[test]]
name = "system_lifecycle"
path = "tests/system_lifecycle.rs"

[[bench]]
name = "mailbox"
path = "benches/mailbox.rs"
harness = false

[lints]
workspace = true
