[package]
name = "cellactor-actor-core-rs"
version = "0.1.0"
edition = "2024"
description = "Cellactor no_std actor runtime core"
license = "MIT OR Apache-2.0"
keywords = ["cellactor", "actor", "runtime", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/cellactor-rs"
publish = false

[features]
default = []
alloc = []
alloc-metrics = []

[dependencies]
async-trait = { workspace = true }
cellactor-utils-core-rs = { workspace = true, default-features = false, features = ["alloc", "unsize"] }
critical-section = { workspace = true }
heapless = { workspace = true, default-features = false, features = ["portable-atomic"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
portable-atomic-util = { workspace = true, default-features = false, features = ["alloc"] }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
cortex-m = { workspace = true, optional = true }
hashbrown = { workspace = true, default-features = false }
serde = { workspace = true }
erased-serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
cellactor-actor-std-rs = { path = "../actor-std" }
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[[example]]
name = "ping_pong_no_std"
path = "examples/ping_pong_not_std/main.rs"

[[example]]
name = "typed_ping_pong_not_std"
path = "examples/ping_pong_typed_not_std/main.rs"

[[example]]
name = "behaviors_state_transition_typed_no_std"
path = "examples/behaviors_state_transition_typed_no_std/main.rs"
