[package]
name = "fraktor-actor-core-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor no_std actor runtime core"
license = "MIT OR Apache-2.0"
keywords = ["fraktor", "actor", "runtime", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/fraktor-rs"
homepage = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-actor-core-rs"
readme = "../../README.md"

[features]
default = []
alloc = []
alloc-metrics = []
test-support = []

[dependencies]
async-trait = { workspace = true }
fraktor-utils-core-rs = { workspace = true, default-features = false, features = ["alloc", "unsize"] }
critical-section = { workspace = true }
heapless = { workspace = true, default-features = false, features = ["portable-atomic"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
portable-atomic-util = { workspace = true, default-features = false, features = ["alloc"] }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
cortex-m = { workspace = true, optional = true }
hashbrown = { workspace = true, default-features = false }
serde = { workspace = true }
erased-serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
proptest = "1.5"

[[example]]
name = "ping_pong_not_std"
path = "examples/ping_pong_not_std/main.rs"

[[example]]
name = "ping_pong_typed_not_std"
path = "examples/ping_pong_typed_not_std/main.rs"

[[example]]
name = "message_adapter_no_std"
path = "examples/message_adapter_no_std/main.rs"

[[example]]
name = "behaviors_state_transition_typed_no_std"
path = "examples/behaviors_state_transition_typed_no_std/main.rs"

[[example]]
name = "serialization_custom_no_std"
path = "examples/serialization_custom_no_std/main.rs"

[[example]]
name = "scheduler_once_no_std"
path = "examples/scheduler_once_no_std/main.rs"

[[example]]
name = "scheduler_once_typed_no_std"
path = "examples/scheduler_once_typed_no_std/main.rs"

[[example]]
name = "scheduler_periodic_no_std"
path = "examples/scheduler_periodic_no_std/main.rs"

[[example]]
name = "scheduler_periodic_typed_no_std"
path = "examples/scheduler_periodic_typed_no_std/main.rs"

[[example]]
name = "scheduler_cancellation_no_std"
path = "examples/scheduler_cancellation_no_std/main.rs"

[[example]]
name = "scheduler_cancellation_typed_no_std"
path = "examples/scheduler_cancellation_typed_no_std/main.rs"

[[example]]
name = "scheduler_diagnostics_no_std"
path = "examples/scheduler_diagnostics_no_std/main.rs"

[[example]]
name = "scheduler_diagnostics_typed_no_std"
path = "examples/scheduler_diagnostics_typed_no_std/main.rs"
