[package]
name = "fraktor-actor-std-rs"
version = "0.2.11"
edition = "2024"
description = "fraktor std helpers for host runtimes"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/j5ik2o/fraktor-rs"
repository = "https://github.com/j5ik2o/fraktor-rs"
documentation = "https://docs.rs/fraktor-actor-std-rs"
readme = "../../README.md"
keywords = ["fraktor", "actor", "runtime", "std"]
categories = ["concurrency"]

[features]
default = []
tokio-executor = ["dep:tokio"]

[dependencies]
fraktor-actor-core-rs = { workspace = true }
fraktor-utils-core-rs = { workspace = true, default-features = false }
fraktor-utils-std-rs = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }

[[example]]
name = "ping_pong_tokio"
path = "examples/ping_pong_tokio_std/main.rs"
required-features = ["tokio-executor"]

[[example]]
name = "logger_subscriber"
path = "examples/logger_subscriber_std/main.rs"

[[example]]
name = "supervision"
path = "examples/supervision_std/main.rs"

[[example]]
name = "deadletter"
path = "examples/dead_letter_std/main.rs"
required-features = ["tokio-executor"]

[[example]]
name = "named_actor"
path = "examples/named_actor_std/main.rs"

[[example]]
name = "behaviors_setup_receive"
path = "examples/behaviors_setup_receive_std/main.rs"

[[example]]
name = "behaviors_unhandled"
path = "examples/behaviors_unhandled_std/main.rs"

[[example]]
name = "behaviors_empty"
path = "examples/behaviors_empty_std/main.rs"
